took margin off .line, this fixed gap issue at bottom of page

--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-  
-    
+   
     
   }
 
@@ -42,7 +41,6 @@
    .line {
     width: 100%;
     height: 5.27px;
-    margin:15px 0;
     position: relative;
     background-color: rgba(255, 255, 255, 0.8);
     mix-blend-mode: soft-light;
@@ -66,6 +64,7 @@
     text-align: center;
     font-size: 14px;
     color: #fff;
+
   }
   
   /* Login page */
@@ -169,6 +168,9 @@
   
 
 /* Game Directions */
+.directions-margin{
+  margin:40px;
+}
   .inner-directions{
     width: 385px;
     color: #fff;
